--- a/VideoStreamToServer/VideoStreamToServer.csproj
+++ b/VideoStreamToServer/VideoStreamToServer.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="tusdotnet" Version="2.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Tus\" />
   </ItemGroup>
 
 </Project>
