receive html and send it as pdf

--- a/VideoStreamToServer/VideoStreamToServer.csproj
+++ b/VideoStreamToServer/VideoStreamToServer.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.5" />
+    <PackageReference Include="itext7.pdfhtml" Version="5.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="tusdotnet" Version="2.8.0" />
   </ItemGroup>
