--- a/VideoStreamToServer/appsettings.json
+++ b/VideoStreamToServer/appsettings.json
@@ -2,7 +2,7 @@
   "FileUpload": {
     "MaximumFileSizeInByte": "999999999",
     "UploadPath": "D:/SRC/VideoStreamToServer",
-    "AllowedFileExtensions": [ ".mp4", ".zip" ]
+    "AllowedFileExtensions": [ ".mp4", ".zip", ".html" ]
   },
   "Logging": {
     "LogLevel": {
